--- a/package.json
+++ b/package.json
@@ -12,27 +12,35 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@react-pdf/renderer": "^3.3.4",
+    "@tabler/icons-react": "^3.20.0",
     "@types/uuid": "^9.0.8",
     "@uidotdev/usehooks": "^2.4.1",
     "antd": "^5.13.2",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "downloadjs": "^1.4.7",
+    "framer-motion": "^11.11.10",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-merge-refs": "^2.1.1"
+    "react-merge-refs": "^2.1.1",
+    "react-router-dom": "^6.27.0",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/downloadjs": "^1.4.6",
+    "@types/node": "^22.8.0",
     "@types/react": "^18.2.43",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.2.2",
     "uuid": "^9.0.1",
     "vite": "^5.0.8"
