--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.10",
     "react-merge-refs": "^2.1.1",
     "react-router-dom": "^6.27.0",
     "tailwind-merge": "^2.5.4"
