--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dropzone": "^14.2.10",
     "react-merge-refs": "^2.1.1",
     "react-router-dom": "^6.27.0",
+    "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
