--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "downloadjs": "^1.4.7",
     "framer-motion": "^11.11.10",
+    "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
@@ -29,6 +30,7 @@
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "@types/downloadjs": "^1.4.6",
     "@types/node": "^22.8.0",
     "@types/react": "^18.2.43",
