--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/uuid": "^9.0.8",
     "@uidotdev/usehooks": "^2.4.1",
     "antd": "^5.13.2",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "downloadjs": "^1.4.7",
     "framer-motion": "^11.11.10",
