--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@react-pdf/renderer": "^3.3.4",
     "@tabler/icons-react": "^3.20.0",
     "@types/uuid": "^9.0.8",
